# wdng

./: .gitignore  Cargo.toml  README.md  config.yml  run.ps1
cert/: srvs-eu-cert.pem  srvs-eu-private.pem
client/: index.html
common/: Cargo.toml
common/src/: config_utils.rs  const_config.rs  lib.rs
data/: Cargo.toml
data/src/: lib.rs  model.rs  mongo_repo.rs  repo.rs
main/: Cargo.toml
main/src/: cli.rs  main.rs
sample_data/: db.ps1  etalon_config.yml  mongo.js
server/: Cargo.toml
server/src/: codec.rs  lib.rs  messages.rs  server.rs  session.rs
src/: main.rs
