[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.138"
serde_json = "1.0.82"
mongodb = { version = "2.3.0" }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
config = { version = "0.13.2", features = ["yaml"] }

common = { path = "../common" }