[package]
name = "wdng"
version = "0.1.0"
edition = "2021"

[dependencies]

actix = "0.13"
actix-files = "0.6.1"
actix-web = { version = "4.1.0", features = ["openssl"] }
actix-web-actors = "4.1"
openssl = { version = "0.10", features = ["v110"] }

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = "1.0.138"
serde_json = "1.0.82"

server = { path = "../server" }