[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-files = "0.6.1"
actix-web = "4.1.0"
actix-web-actors = "4.1"
actix-codec = "0.5.0"

byteorder = "1.2"
bytes = "1"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std", "sink"] }
log = "0.4"
rand = "0.8"
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"

data = { path = "../data" }